--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ google-api-core==1.11.1
 google-auth==1.6.3
 googleapis-common-protos==1.6.0
 grpcio==1.21.1
+gunicorn==19.9.0
+heroku==0.1.4
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
@@ -19,6 +21,7 @@ pyasn1-modules==0.2.5
 PyJWT==1.7.1
 pymongo==3.8.0
 PySocks==1.7.0
+python-dateutil==1.5
 pytz==2019.1
 requests==2.22.0
 rsa==4.0
